# AIQC

./: README.md  Run_this_local.md  api_smoke_test.sh  backend_architecture.md  cmds.txt  main.py  pyproject.toml  test.txt
app/: API_Routes.md  README.md
app/api/: app.py  sse.py
app/core/: config.py  exceptions.py  logging.py  schemas.py
app/healing/: __init__.py  healer.py  locator_scorer.py
app/llm/: client.py  prompts.py
app/pipeline/: code_generator.py  diff_analyzer.py  executor.py  orchestrator.py  scenario_generator.py
app/rag/: embeddings.py  indexer.py  retriever.py  vector_store.py
app/skills/: skills_structure.md
data/reports/: 01e1109a-cab8-4582-803f-ac1afca6e8ae.json  062341f6-3658-465d-b1b6-329bf3a4360c.json  07e2cbe9-82ca-44f7-a818-183ba0872c5e.json  0a546a64-00d0-422c-808e-e4d83edc396d.json  0aa87f5a-6f81-4ca2-b5be-86ad82f1d5ea.json  0f3c8ffa-247c-428c-9b78-ef9416b558b7.json  10b0a7f2-de36-482f-bac1-dcff3520a638.json  165761d7-ca4b-4f40-86cf-e4be7be68a6f.json  25531991-122e-4452-bee1-090e50ae8eda.json  29d70de7-5dbd-4e54-8b6c-17609cf5d8db.json  2c580861-b586-46be-9973-a4a5e519b9e3.json  4002d0ca-fe18-49f5-9165-44ff95969f6f.json  45e1c899-9ba3-4671-b529-3263ab1d3abb.json  46e34c4e-97ba-4802-b60e-e5056affd85c.json  4bef4826-d981-4dd1-85f4-6effee1d0c02.json  4f15a87a-0d03-493d-ab00-950b17c71a8a.json  520fa50d-c41c-4768-9d5b-97f5a8082d2c.json  (+39 more)
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+2 more)
scripts/: index_repo.py  query_context.py  run_pipeline.sh
tests/: conftest.py
(+27 files in other folders)
