[project]
name = "aiqc"
version = "0.1.0"
description = "AI-Driven QA Platform Architecture"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-json-report>=1.5.0",
    "pytest-playwright>=0.7.2",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.1.0",
    "uvicorn>=0.41.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.3.1",
    "ruff>=0.15.6",
]
